# LogicProcessorEngine

./: pyproject.toml  replit.md
.github/workflows/: codeql.yml
attached_assets/: Pasted--LOGIC-PROCESSOR-AI-API-SYSTEM-Rea-1750347372284_1750347372285.txt  Pasted--LOGIC-PROCESSOR-AI-API-SYSTEM-Rea-1750347418543_1750347418543.txt  Pasted--LOGIC-PROCESSOR-ENGINE-Real-World-Int-1749455303755_1749455303755.txt  Pasted--workspace-poetry-init-This-command-will-guide-you-through-creating-your-pyproject-toml-config--1750371184009_1750371184015.txt  Pasted-from-replit-import-db-import-streamlit-as-st-Function-to-restore-session-state-from-the-database--1750347351719_1750347351724.txt
client/src/: App.tsx  index.css
client/src/components/: AIInsights.tsx  CircuitCanvas.tsx  CircuitTemplates.tsx  LogicGate.tsx  MusicStudio.tsx  OutputPanel.tsx  ParticleVisualization.tsx  PerformanceMonitor.tsx  QuantumPhysicsEngine.tsx  SimulationPanel.tsx  SystemStatus.tsx  ToolsPanel.tsx
client/src/hooks/: useCircuit.ts  useWeather.ts
client/src/lib/: circuitEngine.ts  websocket.ts
client/src/pages/: circuit-builder.tsx  quantum-studio.tsx
life_assistant_replit/: index.html  main.py
quantum_visualizer_locked/: quantum_visualizer_locked.html
server/: routes.ts  storage.ts
shared/: schema.ts
